@@ -1,14 +1,29 @@
-FROM pjgg/custom-jre:v1.0.0
+# First stage: Runs JLink to create the custom JRE
+FROM jfisbein/alpine-oracle-jdk9 AS builder
 
-RUN apk update && \
-    apk add openssl curl
+WORKDIR /app
 
 COPY target/*fat.jar app.jar
-RUN sh -c 'touch /app.jar'
 
+RUN jlink --module-path app.jar:$JAVA_HOME/jmods \
+        --add-modules java.logging,java.base \
+        --output dist \
+        --compress 2 \
+        --strip-debug \
+        --no-header-files \
+        --no-man-pages
+
+
+# Second stage: setup your service over your custom JRE
+FROM alpine:3.6
+
+COPY src/main/resources/server-keystore.jks server-keystore.jks
+
+WORKDIR /app
 EXPOSE 8080
 
-RUN ls ./custom-jre/
-RUN ls ./custom-jre/bin/
+COPY --from=builder /app/dist/ ./
+COPY target/*fat.jar app.jar
 
-ENTRYPOINT [ "sh", "-c", "./custom-jre/bin/customJava -jar /app.jar" ]
+ENTRYPOINT [ "sh", "-c", "/app/bin/java -jar /app/app.jar" ]
+
